# omwmm

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
cli/tests/: integration.rs  unit.rs
cli/tests/assets/: Morrowind.ini  openmw_out.cfg
cli/tests/assets/Data Files/: omw-util.manifest
common/: cargo.toml
common/src/: lib.rs
gui/: Cargo.toml
gui/src/: app.rs  appui.rs  lib.rs
gui/src/views/: main_view.rs  menu_bar_view.rs  right_side_view.rs
src/: app.rs  appui.rs  lib.rs
src/views/: main_view.rs  menu_bar_view.rs  record_editor_view.rs  records_list_view.rs  right_side_view.rs
