[package]
name = "omw-util"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

log = { workspace = true }
simple_logger = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }

clap = { version = "4.1", features = ["derive"] }
toml = "0.7"


# standard crate data is left out
[dev-dependencies]
pretty_assertions = "1.3"
