[package]
name = "omwmm"
version = "0.1.0"
authors = ["Moritz Baron  <r.fuzzo@gmail.com>"]
edition = "2021"
rust-version = "1.69"


[dependencies]
common = { path = "../common" }

log = { workspace = true }
simple_logger = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }

toml = "0.7"

egui = "0.22"
eframe = { version = "0.22", default-features = false, features = [
  "default_fonts", # Embed the default egui fonts.
  "glow",          # Use the glow rendering backend. Alternative: "wgpu".
  "persistence",   # Enable restoring app state when restarting the app.
] }
egui-notify = { git = "https://github.com/ItsEthra/egui-notify" }
catppuccin-egui = "3.0"
egui_dnd = { git = "https://github.com/rfuzzo/egui_dnd", branch = "feature/egui-update" }

rfd = { version = "0.11", features = ["file-handle-inner"] }
tracing-subscriber = "0.3"
open = "4.1"
